// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> if the sidebar is invisible renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <aside
        class="h-full relative py-3 px-2 overflow-y-scroll hidden"
        style="width: 204px;"
      >
        <div
          class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
          draggable="true"
        >
          <div
            class="flex"
          >
            <input
              class="p-2 rounded-md w-full"
              placeholder="Table name"
              tabindex="4"
              type="text"
              value="MockFirstTable"
            />
            <select
              class="w-full appearance-none rounded-tr-md cursor-pointer"
              tabindex="5"
              title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
            >
              <option />
              <option
                disabled=""
                value="1"
              >
                &lt; MockFirstTable
              </option>
              <option
                value="2"
              >
                &lt; MockSecondTable
              </option>
            </select>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockFirstAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockSecondAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <button
            class="btn-first rounded-full m-1 aspect-square h-6"
            title="Add an attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockPlusSign
            </div>
          </button>
          <button
            class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
            title="Delete the table"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
        </div>
        <div
          class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
          draggable="true"
        >
          <div
            class="flex"
          >
            <input
              class="p-2 rounded-md w-full"
              placeholder="Table name"
              tabindex="4"
              type="text"
              value="MockSecondTable"
            />
            <select
              class="w-full appearance-none rounded-tr-md cursor-pointer"
              tabindex="5"
              title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
            >
              <option />
              <option
                value="1"
              >
                &lt; MockFirstTable
              </option>
              <option
                disabled=""
                value="2"
              >
                &lt; MockSecondTable
              </option>
            </select>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockThirdAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockFourthAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <button
            class="btn-first rounded-full m-1 aspect-square h-6"
            title="Add an attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockPlusSign
            </div>
          </button>
          <button
            class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
            title="Delete the table"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
        </div>
        <button
          class="p-1 mt-4 btn-first rounded-full aspect-square h-10"
          title="Add a table"
        >
          <div
            class="stroke-[40] w-5 h-5"
          >
            MockPlusSign
          </div>
        </button>
        MockSettings
      </aside>
    </div>
  </body>,
  "container": <div>
    <aside
      class="h-full relative py-3 px-2 overflow-y-scroll hidden"
      style="width: 204px;"
    >
      <div
        class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
        draggable="true"
      >
        <div
          class="flex"
        >
          <input
            class="p-2 rounded-md w-full"
            placeholder="Table name"
            tabindex="4"
            type="text"
            value="MockFirstTable"
          />
          <select
            class="w-full appearance-none rounded-tr-md cursor-pointer"
            tabindex="5"
            title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
          >
            <option />
            <option
              disabled=""
              value="1"
            >
              &lt; MockFirstTable
            </option>
            <option
              value="2"
            >
              &lt; MockSecondTable
            </option>
          </select>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockFirstAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockSecondAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <button
          class="btn-first rounded-full m-1 aspect-square h-6"
          title="Add an attribute"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockPlusSign
          </div>
        </button>
        <button
          class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
          title="Delete the table"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockMinusSign
          </div>
        </button>
      </div>
      <div
        class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
        draggable="true"
      >
        <div
          class="flex"
        >
          <input
            class="p-2 rounded-md w-full"
            placeholder="Table name"
            tabindex="4"
            type="text"
            value="MockSecondTable"
          />
          <select
            class="w-full appearance-none rounded-tr-md cursor-pointer"
            tabindex="5"
            title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
          >
            <option />
            <option
              value="1"
            >
              &lt; MockFirstTable
            </option>
            <option
              disabled=""
              value="2"
            >
              &lt; MockSecondTable
            </option>
          </select>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockThirdAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockFourthAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <button
          class="btn-first rounded-full m-1 aspect-square h-6"
          title="Add an attribute"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockPlusSign
          </div>
        </button>
        <button
          class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
          title="Delete the table"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockMinusSign
          </div>
        </button>
      </div>
      <button
        class="p-1 mt-4 btn-first rounded-full aspect-square h-10"
        title="Add a table"
      >
        <div
          class="stroke-[40] w-5 h-5"
        >
          MockPlusSign
        </div>
      </button>
      MockSettings
    </aside>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Sidebar /> if the sidebar is visible renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <aside
        class="h-full relative py-3 px-2 overflow-y-scroll "
        style="width: 204px;"
      >
        <div
          class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
          draggable="true"
        >
          <div
            class="flex"
          >
            <input
              class="p-2 rounded-md w-full"
              placeholder="Table name"
              tabindex="4"
              type="text"
              value="MockFirstTable"
            />
            <select
              class="w-full appearance-none rounded-tr-md cursor-pointer"
              tabindex="5"
              title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
            >
              <option />
              <option
                disabled=""
                value="1"
              >
                &lt; MockFirstTable
              </option>
              <option
                value="2"
              >
                &lt; MockSecondTable
              </option>
            </select>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockFirstAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockSecondAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <button
            class="btn-first rounded-full m-1 aspect-square h-6"
            title="Add an attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockPlusSign
            </div>
          </button>
          <button
            class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
            title="Delete the table"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
        </div>
        <div
          class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
          draggable="true"
        >
          <div
            class="flex"
          >
            <input
              class="p-2 rounded-md w-full"
              placeholder="Table name"
              tabindex="4"
              type="text"
              value="MockSecondTable"
            />
            <select
              class="w-full appearance-none rounded-tr-md cursor-pointer"
              tabindex="5"
              title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
            >
              <option />
              <option
                value="1"
              >
                &lt; MockFirstTable
              </option>
              <option
                disabled=""
                value="2"
              >
                &lt; MockSecondTable
              </option>
            </select>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockThirdAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <div
            class="flex m-1"
          >
            <button
              class="btn-first rounded-full aspect-square h-6"
              title="Remove the attribute"
            >
              <div
                class="stroke-[40] w-3 h-3"
              >
                MockMinusSign
              </div>
            </button>
            <input
              class="p-1 w-2/3 rounded-md"
              placeholder="Attribute"
              tabindex="4"
              type="text"
              value="mockFourthAttribute"
            />
            <div
              class="w-1/3"
            >
              MockAttributeTypeOptions
            </div>
          </div>
          <button
            class="btn-first rounded-full m-1 aspect-square h-6"
            title="Add an attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockPlusSign
            </div>
          </button>
          <button
            class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
            title="Delete the table"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
        </div>
        <button
          class="p-1 mt-4 btn-first rounded-full aspect-square h-10"
          title="Add a table"
        >
          <div
            class="stroke-[40] w-5 h-5"
          >
            MockPlusSign
          </div>
        </button>
        MockSettings
      </aside>
    </div>
  </body>,
  "container": <div>
    <aside
      class="h-full relative py-3 px-2 overflow-y-scroll "
      style="width: 204px;"
    >
      <div
        class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
        draggable="true"
      >
        <div
          class="flex"
        >
          <input
            class="p-2 rounded-md w-full"
            placeholder="Table name"
            tabindex="4"
            type="text"
            value="MockFirstTable"
          />
          <select
            class="w-full appearance-none rounded-tr-md cursor-pointer"
            tabindex="5"
            title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
          >
            <option />
            <option
              disabled=""
              value="1"
            >
              &lt; MockFirstTable
            </option>
            <option
              value="2"
            >
              &lt; MockSecondTable
            </option>
          </select>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockFirstAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockSecondAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <button
          class="btn-first rounded-full m-1 aspect-square h-6"
          title="Add an attribute"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockPlusSign
          </div>
        </button>
        <button
          class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
          title="Delete the table"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockMinusSign
          </div>
        </button>
      </div>
      <div
        class="my-4 w-full bg-transparent border border-first-500 border-solid rounded-md"
        draggable="true"
      >
        <div
          class="flex"
        >
          <input
            class="p-2 rounded-md w-full"
            placeholder="Table name"
            tabindex="4"
            type="text"
            value="MockSecondTable"
          />
          <select
            class="w-full appearance-none rounded-tr-md cursor-pointer"
            tabindex="5"
            title="Select a superclass to inherit. If it is empty, it inherits from ActiveRecord::Base"
          >
            <option />
            <option
              value="1"
            >
              &lt; MockFirstTable
            </option>
            <option
              disabled=""
              value="2"
            >
              &lt; MockSecondTable
            </option>
          </select>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockThirdAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <div
          class="flex m-1"
        >
          <button
            class="btn-first rounded-full aspect-square h-6"
            title="Remove the attribute"
          >
            <div
              class="stroke-[40] w-3 h-3"
            >
              MockMinusSign
            </div>
          </button>
          <input
            class="p-1 w-2/3 rounded-md"
            placeholder="Attribute"
            tabindex="4"
            type="text"
            value="mockFourthAttribute"
          />
          <div
            class="w-1/3"
          >
            MockAttributeTypeOptions
          </div>
        </div>
        <button
          class="btn-first rounded-full m-1 aspect-square h-6"
          title="Add an attribute"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockPlusSign
          </div>
        </button>
        <button
          class="right-0 absolute -translate-x-full -translate-y-1/2 btn-first rounded-full aspect-square h-6 "
          title="Delete the table"
        >
          <div
            class="stroke-[40] w-3 h-3"
          >
            MockMinusSign
          </div>
        </button>
      </div>
      <button
        class="p-1 mt-4 btn-first rounded-full aspect-square h-10"
        title="Add a table"
      >
        <div
          class="stroke-[40] w-5 h-5"
        >
          MockPlusSign
        </div>
      </button>
      MockSettings
    </aside>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
